// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setVersion updates monorepo for nightly: package.json 1`] = `
"{
  \\"name\\": \\"@react-native/monorepo\\",
  \\"private\\": true,
  \\"version\\": \\"1000.0.0\\",
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.81.0-nightly-29282302-abcd1234\\"
  }
}
"
`;

exports[`setVersion updates monorepo for nightly: packages/monorepo-pkg-a/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-a\\",
  \\"version\\": \\"0.81.0-nightly-29282302-abcd1234\\",
  \\"description\\": \\"@monorepo/pkg-a\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-b\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"@monorepo/other\\": \\"0.0.1\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.81.0-nightly-29282302-abcd1234\\"
  }
}
"
`;

exports[`setVersion updates monorepo for nightly: packages/monorepo-pkg-b/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-b\\",
  \\"version\\": \\"0.81.0-nightly-29282302-abcd1234\\",
  \\"description\\": \\"@monorepo/pkg-b\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for nightly: packages/monorepo-pkg-c/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-c\\",
  \\"version\\": \\"0.81.0-nightly-29282302-abcd1234\\",
  \\"description\\": \\"@monorepo/pkg-c\\",
  \\"dependencies\\": {
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for nightly: packages/react-native/Libraries/Core/ReactNativeVersion.js 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for nightly: packages/react-native/React/Base/RCTVersion.m 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for nightly: packages/react-native/ReactAndroid/gradle.properties 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for nightly: packages/react-native/ReactAndroid/src/main/java/com/facebook/react/modules/systeminfo/ReactNativeVersion.java 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for nightly: packages/react-native/ReactCommon/cxxreact/ReactNativeVersion.h 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for nightly: packages/react-native/package.json 1`] = `
"{
  \\"name\\": \\"react-native\\",
  \\"version\\": \\"0.81.0-nightly-29282302-abcd1234\\",
  \\"description\\": \\"fake react native package\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"@monorepo/pkg-b\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"@monorepo/pkg-c\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for nightly: packages/react-native/template/package.json 1`] = `
"{
  \\"name\\": \\"react-native-test-template\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"dependencies\\": {
    \\"react\\": \\"18.2.0\\",
    \\"react-native\\": \\"0.81.0-nightly-29282302-abcd1234\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"@monorepo/pkg-c\\": \\"0.81.0-nightly-29282302-abcd1234\\",
    \\"@types/react\\": \\"^18.2.6\\",
    \\"@types/react-test-renderer\\": \\"^18.0.0\\"
  }
}
"
`;

exports[`setVersion updates monorepo for release-candidate: package.json 1`] = `
"{
  \\"name\\": \\"@react-native/monorepo\\",
  \\"private\\": true,
  \\"version\\": \\"1000.0.0\\",
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.80.0-rc.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for release-candidate: packages/monorepo-pkg-a/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-a\\",
  \\"version\\": \\"0.80.0-rc.3\\",
  \\"description\\": \\"@monorepo/pkg-a\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-b\\": \\"0.80.0-rc.3\\",
    \\"@monorepo/other\\": \\"0.0.1\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.80.0-rc.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for release-candidate: packages/monorepo-pkg-b/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-b\\",
  \\"version\\": \\"0.80.0-rc.3\\",
  \\"description\\": \\"@monorepo/pkg-b\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.80.0-rc.3\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for release-candidate: packages/monorepo-pkg-c/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-c\\",
  \\"version\\": \\"0.80.0-rc.3\\",
  \\"description\\": \\"@monorepo/pkg-c\\",
  \\"dependencies\\": {
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/Libraries/Core/ReactNativeVersion.js 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/React/Base/RCTVersion.m 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/ReactAndroid/gradle.properties 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/ReactAndroid/src/main/java/com/facebook/react/modules/systeminfo/ReactNativeVersion.java 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/ReactCommon/cxxreact/ReactNativeVersion.h 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/package.json 1`] = `
"{
  \\"name\\": \\"react-native\\",
  \\"version\\": \\"0.80.0-rc.3\\",
  \\"description\\": \\"fake react native package\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.80.0-rc.3\\",
    \\"@monorepo/pkg-b\\": \\"0.80.0-rc.3\\",
    \\"@monorepo/pkg-c\\": \\"0.80.0-rc.3\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for release-candidate: packages/react-native/template/package.json 1`] = `
"{
  \\"name\\": \\"react-native-test-template\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"dependencies\\": {
    \\"react\\": \\"18.2.0\\",
    \\"react-native\\": \\"0.80.0-rc.3\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.80.0-rc.3\\",
    \\"@monorepo/pkg-c\\": \\"0.80.0-rc.3\\",
    \\"@types/react\\": \\"^18.2.6\\",
    \\"@types/react-test-renderer\\": \\"^18.0.0\\"
  }
}
"
`;

exports[`setVersion updates monorepo for stable version: package.json 1`] = `
"{
  \\"name\\": \\"@react-native/monorepo\\",
  \\"private\\": true,
  \\"version\\": \\"1000.0.0\\",
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.80.1\\"
  }
}
"
`;

exports[`setVersion updates monorepo for stable version: packages/monorepo-pkg-a/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-a\\",
  \\"version\\": \\"0.80.1\\",
  \\"description\\": \\"@monorepo/pkg-a\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-b\\": \\"0.80.1\\",
    \\"@monorepo/other\\": \\"0.0.1\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.80.1\\"
  }
}
"
`;

exports[`setVersion updates monorepo for stable version: packages/monorepo-pkg-b/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-b\\",
  \\"version\\": \\"0.80.1\\",
  \\"description\\": \\"@monorepo/pkg-b\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.80.1\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for stable version: packages/monorepo-pkg-c/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-c\\",
  \\"version\\": \\"0.80.1\\",
  \\"description\\": \\"@monorepo/pkg-c\\",
  \\"dependencies\\": {
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for stable version: packages/react-native/Libraries/Core/ReactNativeVersion.js 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for stable version: packages/react-native/React/Base/RCTVersion.m 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for stable version: packages/react-native/ReactAndroid/gradle.properties 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for stable version: packages/react-native/ReactAndroid/src/main/java/com/facebook/react/modules/systeminfo/ReactNativeVersion.java 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for stable version: packages/react-native/ReactCommon/cxxreact/ReactNativeVersion.h 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo for stable version: packages/react-native/package.json 1`] = `
"{
  \\"name\\": \\"react-native\\",
  \\"version\\": \\"0.80.1\\",
  \\"description\\": \\"fake react native package\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.80.1\\",
    \\"@monorepo/pkg-b\\": \\"0.80.1\\",
    \\"@monorepo/pkg-c\\": \\"0.80.1\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo for stable version: packages/react-native/template/package.json 1`] = `
"{
  \\"name\\": \\"react-native-test-template\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"dependencies\\": {
    \\"react\\": \\"18.2.0\\",
    \\"react-native\\": \\"0.80.1\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.80.1\\",
    \\"@monorepo/pkg-c\\": \\"0.80.1\\",
    \\"@types/react\\": \\"^18.2.6\\",
    \\"@types/react-test-renderer\\": \\"^18.0.0\\"
  }
}
"
`;

exports[`setVersion updates monorepo on main after release cut: package.json 1`] = `
"{
  \\"name\\": \\"@react-native/monorepo\\",
  \\"private\\": true,
  \\"version\\": \\"1000.0.0\\",
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.82.0-main\\"
  }
}
"
`;

exports[`setVersion updates monorepo on main after release cut: packages/monorepo-pkg-a/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-a\\",
  \\"version\\": \\"0.82.0-main\\",
  \\"description\\": \\"@monorepo/pkg-a\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-b\\": \\"0.82.0-main\\",
    \\"@monorepo/other\\": \\"0.0.1\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.82.0-main\\"
  }
}
"
`;

exports[`setVersion updates monorepo on main after release cut: packages/monorepo-pkg-b/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-b\\",
  \\"version\\": \\"0.82.0-main\\",
  \\"description\\": \\"@monorepo/pkg-b\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-c\\": \\"0.82.0-main\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo on main after release cut: packages/monorepo-pkg-c/package.json 1`] = `
"{
  \\"name\\": \\"@monorepo/pkg-c\\",
  \\"version\\": \\"0.82.0-main\\",
  \\"description\\": \\"@monorepo/pkg-c\\",
  \\"dependencies\\": {
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/Libraries/Core/ReactNativeVersion.js 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/React/Base/RCTVersion.m 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/ReactAndroid/gradle.properties 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/ReactAndroid/src/main/java/com/facebook/react/modules/systeminfo/ReactNativeVersion.java 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/ReactCommon/cxxreact/ReactNativeVersion.h 1`] = `"[omitted]"`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/package.json 1`] = `
"{
  \\"name\\": \\"react-native\\",
  \\"version\\": \\"1000.0.0\\",
  \\"description\\": \\"fake react native package\\",
  \\"dependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.82.0-main\\",
    \\"@monorepo/pkg-b\\": \\"0.82.0-main\\",
    \\"@monorepo/pkg-c\\": \\"0.82.0-main\\",
    \\"metro-config\\": \\"^0.80.3\\",
    \\"metro-runtime\\": \\"^0.80.3\\"
  }
}
"
`;

exports[`setVersion updates monorepo on main after release cut: packages/react-native/template/package.json 1`] = `
"{
  \\"name\\": \\"react-native-test-template\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"dependencies\\": {
    \\"react\\": \\"18.2.0\\",
    \\"react-native\\": \\"1000.0.0\\"
  },
  \\"devDependencies\\": {
    \\"@monorepo/pkg-a\\": \\"0.82.0-main\\",
    \\"@monorepo/pkg-c\\": \\"0.82.0-main\\",
    \\"@types/react\\": \\"^18.2.6\\",
    \\"@types/react-test-renderer\\": \\"^18.0.0\\"
  }
}
"
`;
